PS-4585 fixed z-index

--- a/Bundles/ShopUi/src/SprykerShop/Yves/ShopUi/Theme/default/components/molecules/suggest-search/suggest-search.scss
+++ b/Bundles/ShopUi/src/SprykerShop/Yves/ShopUi/Theme/default/components/molecules/suggest-search/suggest-search.scss
@@ -11,7 +11,7 @@
 
         &__input {
             position: relative;
-            z-index: 2;
+            z-index: $setting-zi-search-suggestions + 2;
 
             &--transparent {
                 background-color: $setting-color-transparent;
@@ -28,7 +28,7 @@
             position: absolute;
             top: 0;
             border-color: $setting-color-transparent;
-            z-index: 1;
+            z-index: $setting-zi-search-suggestions + 1;
             color: $setting-color-light;
         }
 
